# deadtree

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
src/deadtree/: __init__.py  auth.py  cli.py  config.py  overleaf.py  repo.py  sync.py
